saves/test/demo_full_20240802_193545/lfsr5/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp lfsr5_tb.v lfsr5.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
lfsr5_tb.v:82: $finish called at 960000 (1ps)

iverilog cmd 2 error:

